# text-viewer-vala

./: README.md  meson.build  org.linusemrch2618.TextViewer.json
data/: com.linusemrch2618.TextViewer.appdata.xml.in  com.linusemrch2618.TextViewer.desktop.in  com.linusemrch2618.TextViewer.gschema.xml  meson.build  org.linusemrch2618.TextViewer.appdata.xml.in  org.linusemrch2618.TextViewer.desktop.in  org.linusemrch2618.TextViewer.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  config.vapi  main.vala  meson.build  text_viewer.gresource.xml  window.ui  window.vala
src/gtk/: help-overlay.ui
src/ui/: help-overlay.ui  window.ui
